[workspace]
members = ["ldhat-sys"]

[package]
name = "ldhat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
ldhat-sys = { path = "./ldhat-sys" }
rand = "0.8.5"
