[workspace]
members = ["ldhat-sys"]

[package]
name = "ldhat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "1.1.0"
clap = { version = "4.1", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
ldhat-sys = { path = "./ldhat-sys" }
log = "0.4.17"
nom = "7.1.2"
polars = { version = "0.26.1", features = ["ndarray", "dtype-u8"] }
rand = "0.8.5"
